--- a/app/admin/templates/subjects/subject_list.html
+++ b/app/admin/templates/subjects/subject_list.html
@@ -72,7 +72,7 @@
                                     {% endif %}
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium space-x-2">
-                                    <button onclick="openAssignModal('{{ sub.id }}', '{{ sub.name }}', '{{ sub.course_name or '' }}', '{{ sub.semester or '' }}', '{{ sub.academic_year or '' }}')" 
+<button onclick="openAssignModal('{{ sub.id }}', `{{ sub.name }}`, `{{ sub.course_name or '' }}`, `{{ sub.semester or '' }}`, `{{ sub.academic_year or '' }}`)">
                                             class="text-indigo-600 hover:text-indigo-900 bg-indigo-50 px-3 py-1 rounded-md transition duration-150">
                                         Assign / Edit
                                     </button>
